--- a/Capstone Project.ipynb
+++ b/Capstone Project.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "# <center>Applied Data Science Capstone Project</center>\n",
+    "# Applied Data Science Capstone Project\n",
     "***"
    ]
   },
